--- a/.github/workflows/steam.yml
+++ b/.github/workflows/steam.yml
@@ -4,11 +4,9 @@ name: Update steam playtime
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    branches: [ "main" ]
   schedule:
-    - cron: "10 * * * *"
+    - cron: "0 */48 * * *"
 
 jobs:
   build:
