--- a/.github/workflows/steam.yml
+++ b/.github/workflows/steam.yml
@@ -11,12 +11,14 @@ on:
 jobs:
   build:
     name: Update-steam-playtime
+    permissions: 
+      contents: write
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
       STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
       STEAM_ID: ${{ secrets.STEAM_ID }}
-      UPDATE_OPTION: GIST_AND_MARKDOWN
+      UPDATE_OPTION: MARKDOWN
       MARKDOWN_FILE: README.md
 
     steps:
